@@ -5,18 +5,18 @@ use warnings;
 
 our $VERSION = '0.49';
 
+use Clone ();
 use Role::Tiny::With;
 use Scalar::Util qw( refaddr );
 use Specio::Library::Builtins;
 use Specio::OO;
-use Storable qw( dclone );
 
 use Specio::Constraint::Role::Interface;
 with 'Specio::Constraint::Role::Interface';
 
 {
     ## no critic (Subroutines::ProtectPrivateSubs)
-    my $attrs = dclone( Specio::Constraint::Role::Interface::_attrs() );
+    my $attrs = Clone::clone( Specio::Constraint::Role::Interface::_attrs() );
     ## use critic
 
     for my $name (qw( parent _inline_generator )) {
