@@ -5,9 +5,9 @@ use warnings;
 
 our $VERSION = '0.49';
 
+use Clone               ();
 use Scalar::Util        qw( blessed );
 use Specio::PartialDump qw( partial_dump );
-use Storable            qw( dclone );
 
 use Role::Tiny;
 
@@ -16,7 +16,7 @@ with 'Specio::Constraint::Role::Interface';
 
 {
     ## no critic (Subroutines::ProtectPrivateSubs)
-    my $attrs = dclone( Specio::Constraint::Role::Interface::_attrs() );
+    my $attrs = Clone::clone( Specio::Constraint::Role::Interface::_attrs() );
     ## use critic
 
     for my $name (qw( parent _inline_generator )) {
@@ -41,7 +41,7 @@ sub _wrap_message_generator {
     my $self      = shift;
     my $generator = shift;
 
-    my $type          = ( split /::/, blessed $self)[-1];
+    my $type          = ( split /::/, blessed $self )[-1];
     my @methods       = @{ $self->methods };
     my $all_word_list = _word_list(@methods);
     my $allow_classes = $self->_allow_classes;
