@@ -1,6 +1,7 @@
 use strict;
 use warnings;
 
+use Test::Fatal;
 use Test::More 0.96;
 use Test::Specio qw( test_constraint :vars );
 
@@ -119,5 +120,37 @@ is(
     'Map{ NonEmptyStr => HashRef[Int] }',
     'Map type has expected generated name'
 );
+
+## no critic (Modules::ProhibitMultiplePackages)
+{
+    package Declarer;
+
+    use Specio::Declare;
+    use Specio::Library::Builtins;
+    use Specio::Library::Structured;
+
+    use parent 'Specio::Exporter';
+
+    declare(
+        'SomeMap',
+        'parent' => t(
+            'Map',
+            'of' => {
+                'key'   => t('Str'),
+                'value' => t('Str'),
+            }
+        )
+    );
+}
+
+{
+    package ImportInto;
+
+    ::is(
+        ::exception { Declarer->import },
+        undef,
+        'No exception thrown when importing a Map type',
+    );
+}
 
 done_testing();
